<resources>
    <!-- Generic -->
    <string name="app_name" translatable="false">Rehcorder</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="record">Record</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="cut">Cut</string>
    <string name="seek_back">Seek back</string>
    <string name="seek_forward">Seek forward</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="seek_bar">Seek bar</string>

    <!-- Menu -->
    <string name="menu_songs">Songs</string>
    <string name="menu_rehearsals">Rehearsals</string>

    <!-- Settings -->
    <string name="settings_recordings">Recordings</string>
    <string name="settings_mic_title">Unprocessed microphone</string>
    <string name="settings_mic_summary">Use, if available, the cleanest microphone input</string>
    <string name="settings_sample_rate_title">Sample rate</string>
    <string name="settings_sample_rate_summary">Select sample rate to be used for the audio recording</string>
    <string name="settings_storage_title">Delete processed recordings</string>
    <string name="settings_storage_summary">Delete full recording after processing to save space</string>
    <string name="settings_repair_title">Repair recordings state</string>
    <string name="settings_repair_summary">In case you keep getting prompted your recordings are being normalized, this can fix it</string>
    <string name="settings_about">About</string>
    <string name="settings_source_code">Source code</string>
    <string name="settings_feedback_title">Send feedback</string>
    <string name="settings_feedback_summary">Get in touch with suggestions or bug reports</string>
    <string name="settings_website">Website</string>

    <string-array name="settings_sample_rate" translatable="false">
        <item>8000</item>
        <item>44100</item>
        <item>48000</item>
    </string-array>

    <!-- Recording -->
    <string name="press_to_record">Press to record</string>
    <string name="permission_required_title">Permission required</string>
    <string name="permission_required">This app needs to access your microphone to record rehearsals</string>

    <!-- Songs -->
    <string name="s_title">Your songs</string>
    <string name="s_rename">Song name</string>
    <plurals name="s_versions">
        <item quantity="one">%1$d Version</item>
        <item quantity="other">%1$d Versions</item>
    </plurals>

    <!-- Rehearsals -->
    <string name="r_card_title">Process Your Latest Recording</string>
    <string name="r_card_description">You have an unprocessed rehearsal recording</string>
    <string name="r_card_action">Process Now</string>
    <string name="r_rename">Rehearsal name</string>
    <string name="r_title">Your rehearsals</string>
    <plurals name="r_count">
        <item quantity="one">%1$d Song</item>
        <item quantity="other">%1$d Songs</item>
    </plurals>
    <string name="r_no_recordings">No recordings yet, tap the record button to start!</string>

    <!-- Dialogs -->
    <string name="dialog_recorded_title">Audio is being normalized</string>
    <string name="dialog_recorded_message">The recording is being normalized, please wait for the process to finish before continuing.</string>
    <string name="dialog_processing_title">Audio is being processed</string>
    <string name="dialog_processing_message">The recording is being processed and split in different tracks, please wait for the process to finish before continuing.</string>
    <string name="dialog_error_state_title">Error</string>
    <string name="dialog_error_state_message">The recording is currently in an inconsistent state.</string>
    <string name="dialog_not_found_title">File not found</string>
    <string name="dialog_not_found_message">Cannot access the file. Maybe it was on external storage and it has been deleted?</string>
    <string name="dialog_delete_rehearsal_title">Are you sure?</string>
    <string name="dialog_delete_rehearsal_message">If you delete a rehearsal you also delete all the recordings and its already processed songs.</string>
    <string name="dialog_save_error_title">Error</string>
    <string name="dialog_save_error_message">You must select at least a song, and you have to specify a starting point and an ending point for each of the songs.</string>
    <string name="dialog_confirm_exit_title">Confirm exit</string>
    <string name="dialog_confirm_exit_message">If you exit now you will lose all your progress and will have to start splitting the audio from scratch.</string>
    <string name="dialog_delete_song_title">Are you sure?</string>
    <string name="dialog_delete_song_message">You are going to completely delete a song and all its versions, you won\'t be able to recover the recordings.</string>
    <string name="dialog_repair_title">Are you sure?</string>
    <string name="dialog_repair_message">This will try to re-normalize all the broken recordings. It might take a while.</string>

    <!-- Process -->
    <string name="begin_song">Begin song</string>
    <string name="end_song">End song</string>
    <string name="undo">Undo</string>
    <string name="save_exit">Save and exit</string>

    <string name="s_picker_title">Pick song</string>
    <string name="s_picker_new_song">+ New song</string>
    <string name="s_new_title">New song</string>
    <string name="s_new_song_name">Song name</string>
    <string name="s_new_add">Add</string>

    <!-- Rehearsal and Song list -->
    <string name="s_l_version">Version %1$d</string>
    <string name="s_l_title">Versions list</string>
    <string name="r_l_title">Songs list</string>

    <!-- Notifications -->
    <string name="notification_recorder_title">Rehearsal is being recorded</string>
    <string name="notification_recorder_text">Tap to return to the application</string>
    <string name="notification_normalizer_title">Normalizing audio…</string>
    <string name="notification_normalizer_text">Audio is being normalized in the background</string>
    <string name="notification_splitter_title">Splitting audio…</string>
    <string name="notification_splitter_text">Audio is being split into tracks in the background</string>

</resources>