<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp">

            <dev.leonardini.rehcorder.ui.WaveformView
                android:id="@+id/waveform"
                android:layout_width="match_parent"
                android:layout_height="60pt"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_marginBottom="30dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_marginBottom="64dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="00:00"
                    tools:ignore="HardcodedText" />

                <dev.leonardini.rehcorder.ui.HighlightedSeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    app:selectionColor="@color/appRed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/audio_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:text="13:37"
                    tools:ignore="HardcodedText" />

            </GridLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seek_back"
                    style="@style/Widget.App.Button.Player.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_replay_10" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/play_pause"
                    style="@style/Widget.App.Button.Player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    app:icon="@drawable/ic_play" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seek_forward"
                    style="@style/Widget.App.Button.Player.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_forward_10" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_song"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_marginTop="24dp"
                android:text="@string/begin_song"
                app:icon="@drawable/ic_music"
                app:iconGravity="textStart"
                app:iconPadding="8dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/undo"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/undo"
                    app:icon="@drawable/ic_undo"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/save_exit"
                    app:icon="@drawable/ic_save"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </GridLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

